Version 0.0.1 to
----------------------
* add IntegerIfIntOrLong function in rational.py.
* add LUDecomposition method to Matrix in matrix.py.
* now you can factor a very big but very smooth integer by trial division.
* speed up real.log, and it now accepts float.
* fix bugs in rational.py.

Version 0.0.0 to 0.0.1
----------------------
* add __long__ and __int__ methods to Rational in rational.py.
* add gcd method to PolynomialRing in polynomial.py.
* fix bugs in matrix.py, polynomial.py.